src/credo/static/credo/styles.css
.main {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.body {
    flex-grow: 1;
}

.centeredSpinner {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
}

svg.tooltipped {
    opacity: 0.5;
    transition: opacity 0.1s ease-in-out;
}

svg.tooltipped:hover {
    opacity: 1;
}

.btn {
    letter-spacing: normal;
}

#tools-right {
    float: right;
}

#toolbar {
    overflow-x: visible;
    overflow-y: auto;
    padding-right: 5px;
    padding-bottom: 5px;
    margin-right: -5px;
}

#makeRevisionButton {
    float: right;
    z-index: 10;
}

#makeRevisionSpan {
    float: right;
    z-index: 10;
}

#downloadButton {
    float: left;
    z-index: 10;
}

#downloadSpan {
    float: left;
    z-index: 10;
}

.splash-image {
    text-align: center;
    width: 700px;
    margin: 50px auto;
}

.logo-icon {
    margin-left: 15px;
}

.breadcrumb-container {
    padding-left: 10px;
}

.breadcrumb-vspace {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    display: flex;
    min-height: 48px;
}

#renderDiv {
    margin-top: 20px;
    padding: 20px;
    box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, 0.1);
    margin-bottom: 50px;
}

#resolveDiv > svg {
    width: 50%;
    display: block;
    margin: auto;
}

.loading {
    box-shadow: none !important;
}

li.username-display {
    padding-left: 0.25em;
    padding-right: 1em;
}

span > .username-display {
    padding-left: 0.25em;
}

.errorlist {
    text-align: center;
    text-shadow: 0 0 0.1em Silver;
    margin: auto;
    padding-top: 1em;
    color: red;
}

#player {
    display: none;
}

